--- a/Kiln.Mcp/Kiln.Mcp.csproj
+++ b/Kiln.Mcp/Kiln.Mcp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\\Kiln.Core\\Kiln.Core.csproj" />
+    <ProjectReference Include="..\\Kiln.Plugins\\Unity.Il2Cpp\\Kiln.Plugins.Unity.Il2Cpp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
