Auto-load Il2CppDumper symbols after IDA analysis

--- a/Kiln.Plugins/Ida.Pro/Kiln.Plugins.Ida.Pro.csproj
+++ b/Kiln.Plugins/Ida.Pro/Kiln.Plugins.Ida.Pro.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="IdaAutoLoadSymbols.py" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
