Add IDA export tools and il2cppRootDir default

--- a/Kiln.Plugins/Ida.Pro/Kiln.Plugins.Ida.Pro.csproj
+++ b/Kiln.Plugins/Ida.Pro/Kiln.Plugins.Ida.Pro.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <None Include="IdaAutoLoadSymbols.py" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="ida_export_symbols.py" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="ida_export_pseudocode.py" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
