Support IDA 9.2 idat.exe naming

--- a/kiln.config.template.json
+++ b/kiln.config.template.json
@@ -1,5 +1,5 @@
 {
-  "idaPath": "D:\\\\Program Files\\\\IDA Professional 9.2\\\\idat64.exe",
+  "idaPath": "D:\\\\Program Files\\\\IDA Professional 9.2\\\\idat.exe",
   "il2cppRootDir": "Tools\\\\Il2CppDumper",
   "idaOutputDir": "ida",
   "workspaceRoot": "workspace"
