Keep ida-pro-mcp resident and verify connection on startup

--- a/kiln.config.template.json
+++ b/kiln.config.template.json
@@ -8,6 +8,8 @@
   "idaMcpAutoStart": true,
   "idaMcpHeadless": true,
   "idaMcpAutoStartWaitSeconds": 180,
+  "idaMcpResident": true,
+  "idaMcpResidentPingSeconds": 10,
   "idaMcpCommand": "ida-pro-mcp",
   "idaMcpArgs": [
     "--transport",
