Add ida-pro-mcp log passthrough and health check

--- a/kiln.config.template.json
+++ b/kiln.config.template.json
@@ -10,6 +10,9 @@
   "idaMcpAutoStartWaitSeconds": 180,
   "idaMcpResident": true,
   "idaMcpResidentPingSeconds": 10,
+  "idaMcpHttpLogPath": "workspace\\ida_mcp_http.log",
+  "idaMcpHealthCheckEnabled": true,
+  "idaMcpHealthCheckTimeoutSeconds": 30,
   "idaMcpCommand": "ida-pro-mcp",
   "idaMcpArgs": [
     "--transport",
